--- a/src/Components/ResultsList/ResultsList.css
+++ b/src/Components/ResultsList/ResultsList.css
@@ -1,10 +1,23 @@
 .ResultsList {
-    background-color: brown;
     width: 100%;
 }
 
+.ResultsListTitle {
+    margin-top: 30px;
+    margin-left: 30px;
+    text-align: left;
+    color: #f2eee4;
+    font-weight: 400;
+}
+
+.ResultsListSubtitle {
+    margin-left: 30px;
+    text-align: left;
+    color: #f2eee4;
+}
+
 .GridContainer {
-    margin-left: 15px;
+    margin-left: 30px;
     display: grid;
     gap: 30px 0px;
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
