Added notification toasts, and saved state to localStorage in browser

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -19,3 +19,15 @@
   background-color: black;
   background: radial-gradient(#2c6356, #1e4b40)
 }
+
+.ToastContainer {
+  position: fixed;
+  right: 0;
+  top: 0;
+  min-width: 100px;
+  z-index: 80;
+}
+
+.ToastContainerNavbarSpacer {
+  margin-top: 75px;
+}
