--- a/src/Components/FinishedScreen/FinishedScreen.css
+++ b/src/Components/FinishedScreen/FinishedScreen.css
@@ -9,6 +9,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    color: #1e4b40;
 }
 
 .FinishedScreenBackground {
@@ -18,21 +20,26 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-color: black;
-    opacity: 65%;
+    background-color: white;
+    opacity: 80%;
+}
+
+.FinishedScreenTitle {
+    font-weight: 800;
 }
 
 .FinishedScreenMovieList {
-    /* display: flex;
-    flex-direction: row;
-    justify-content: space-evenly; */
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+    max-height: 500px;
+
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .FinishedScreenMovieItem {
-    background-color: beige;
+    
 }
 
 .FinishedScreenMovieItemImage {
