removed unnecessary imports

--- a/src/Components/FinishedScreen/FinishedScreen.css
+++ b/src/Components/FinishedScreen/FinishedScreen.css
@@ -38,9 +38,9 @@
     margin-bottom: 50px;
 }
 
-.FinishedScreenMovieItem {
+/* .FinishedScreenMovieItem {
     
-}
+} */
 
 .FinishedScreenMovieItemImage {
     width: 150px;
