--- a/src/Components/FinishedScreen/FinishedScreen.css
+++ b/src/Components/FinishedScreen/FinishedScreen.css
@@ -10,18 +10,8 @@
     align-items: center;
     justify-content: center;
 
+    background-color: rgba(255,255,255, 0.8);
     color: #1e4b40;
-}
-
-.FinishedScreenBackground {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: white;
-    opacity: 80%;
 }
 
 .FinishedScreenTitle {
